    - made libglade work on Win32 platforms. (Frank)
    - added support for GtkSQPane widget. (Markus)
    - added GtkCList::get_pixtext(). (Andrei, Rich Payne)

Version 0.1.1 "no-holds-barred memento" 24-Sep-2001
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    - added GtkCList::get_selection_info() method. (Andrei)
    - made type checking of parameters passed to PHP-GTK functions more
      forgiving. (Andrei)
    - added GtkNotebook::query_tab_label_packing(),
      GtkBox::query_child_packing(). (Markus)
    - added event watcher, dialog, file selection, panes, and notebook examples
      to gtk.php. (Markus)
    - added Gtk::signal_(add|remove)_emission_hook(), Gtk::signal_name(), and
      Gtk::signal_lookup() functions. (Markus)
    - added GtkCList methods set_row_data(), get_row_data(). (Markus)
    - added support for GtkScintilla, a text-editing widget. (Andrei)
    - implemented GladeXML methods signal_connect_object() and
      signal_autoconnect_object(). (Andrei)
    - fixed GDK keysym constants warnings by prefixing some of them with
      underscores. (Frank)
    - changed PHP-visible extension name from 'gtk' to 'php-gtk'. (Andrei)

Version 0.1 "the void which binds" 1-Aug-2001
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    - added GDK keysyms constants. (Andrei)
    - fixed bug with GtkStyle::copy() that was not returning the result
      properly. (Andrei)
    - implemented support for struct based classes (GdkRectangle, GtkAllocation,
      GtkRequisition, etc). (Andrei)
    - finished drag-n-drop support. (Andrei)
    - ported Scribble example from C. (Andrei)
    - modified GdkWindow::get_pointer() to be simpler, without XInput support.
      (Andrei)
    - changed 'area' event property to be a GdkRectangle. (Andrei)
    - changed 'is_hint' event property to be boolean. (Andrei)
    - added ability to query the state and allocation of a widget. (Andrei)
    - added direct construction of pixmaps. (Andrei)