@@ -3,3 +3,6 @@ Andrei Zmievski <andrei@php.net>
 
 Frank Kromann <fmk@php.net>
     Win32 compilation and some code generator work
+
+Markus Fischer <mfischer@php.net>
+    Miscellaneous code work
