@@ -57,6 +57,6 @@ if test "$PHP_GTK_LIBGLADE" != "no"; then
 	PHP_EVAL_INCLINE($LIBGLADE_CFLAGS)
 	PHP_EVAL_LIBLINE($LIBGLADE_LIBS, LIBGLADE_SHARED_LIBADD)
 	PHP_SUBST(LIBGLADE_SHARED_LIBADD)
-	PHP_GTK_EXTENSION(libglade)
+	PHP_GTK_EXTENSION(libglade, $php_gtk_ext_shared)
   fi
 fi
