@@ -22,5 +22,5 @@ if test "$PHP_GTK_SCINTILLA" != "no"; then
   PHP_ADD_INCLUDE($SCINTILLA_INCDIR)
   PHP_ADD_LIBRARY_WITH_PATH(gtkscintilla, $SCINTILLA_LIBDIR, SCINTILLA_SHARED_LIBADD)
   PHP_SUBST(SCINTILLA_SHARED_LIBADD)
-  PHP_GTK_EXTENSION(scintilla)
+  PHP_GTK_EXTENSION(scintilla, $php_gtk_ext_shared)
 fi
