@@ -7,5 +7,5 @@ PHP_GTK_ARG_ENABLE(sqpane,for GtkSQPane support,
 if test "$PHP_GTK_SQPANE" != "no"; then
 
   AC_DEFINE(HAVE_SQPANE,1,[sqpane support])
-  PHP_GTK_EXTENSION(sqpane)
+  PHP_GTK_EXTENSION(sqpane, $php_gtk_ext_shared)
 fi
