@@ -1,3 +1,5 @@
+    - added ability to build extensions as shared libraries and load them
+      selectively. (Andrei)
     - made libglade work on Win32 platforms. (Frank)
     - added support for GtkSQPane widget. (Markus)
     - added GtkCList::get_pixtext(). (Andrei, Rich Payne)
